tests/golden/compile-fail/pattern_struct_as_tuple.rua
enum Message { Move { x: i64, y: i64 } }

fn x(message: Message) -> i64 {
    match message {
        Message::Move(x, y) => x,
    }
}
